# TMotorCANControl

./: README.ja.md  log_can1.py  pyproject.toml  record_servo_log.py
can1_dump_logs/: can1_dump_20260221_032511.txt  can1_dump_20260221_032655.txt  can1_dump_20260221_033048.txt
demos/mit_can/: check_motor_connection_mit_can.py  demo_current_chirp_mit_can.py  demo_current_step_mit_can.py  demo_full_state_feedback_mit_can.py  demo_idle_mit_can.py  demo_position_step_mit_can.py  demo_position_tracking_mit_can.py  demo_speed_mit_can.py  demo_torque_mit_can.py  demo_two_DOF_mit_can.py
demos/servo_can/: check_motor_connection_servo_can.py  demo_2DOF_servo_can.py  demo_PD_current_can.py  demo_PD_duty_can.py  demo_current_chirp_servo_can.py  demo_current_step_servo_can.py  demo_duty_step_servo_can.py  demo_idle_servo_can.py  demo_position_step_servo_can.py  demo_position_tracking_servo_can.py  demo_velocity_servo_can.py
demos_logs/: servo_log_AK45-36_ID1_1771614208.csv  servo_log_AK45-36_ID1_1771841904.csv
src/TMotorCANControl/: mit_can.py  servo_can.py
src/TMotorCANControl.egg-info/: PKG-INFO
