[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]

# ▼ これを pyproject.toml の一番下に追記 2026/02/13 ▼

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]  # エラー(E), 警告(F), import整理(I) を有効化
ignore = ["E501"]         # 1行の文字数制限(E501)は無視する

[tool.ruff.format]
quote-style = "double"    # 文字列はダブルクォート(")に統一